# Lithograph

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  build_support.rs  justfile
.github/workflows/: baseline.yml
docs/dev/: adr-ast-structural-search.md  baseline-lab.md  distribution.md  hybrid-indexing.md  ladybug-operations.md  ladybug-schema.md  parser-spike-decisions.md  prompt-context-versions.md  raw-graph-queries.md  security.md  type-aware-resolution.md
docs/lithograph/: adr-and-drift.md  architecture.md  boundaries.md  configuration.md  database.md  key-modules.md  overview.md  quickstart.md  workflows.md
examples/: openai_smoke.rs
fixtures/diagnostic/: pyproject.toml
fixtures/doc_claims/: README.md
fixtures/polyglot/: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
fixtures/syntax_errors/: broken.json  broken.py  broken.rs
lab/: community-scope-decision.json  corpus.toml  performance-budgets.json
lab/baselines/: diagnostic.json  flask.json  full-stack-fastapi.json  nestjs.json  ripgrep.json  uv.json
lab/expectations/: diagnostic.json  flask.json  full-stack-fastapi.json  nestjs.json  ripgrep.json  uv.json
lithograph-atlas-prototype/: Lithograph Atlas.dc.html  README.md  atlas-data.js  graph-data.js  graph-engine.js
src/: adr.rs  agents.rs  architecture.rs  ask.rs  attachment.rs  cli.rs  commands.rs  docs_model.rs  documentation_claims.rs  drift.rs  editor_agent.rs  explain.rs  external_knowledge.rs  fingerprint.rs  fts.rs  golden.rs  graph_docs.rs  knowledge_agent.rs  lib.rs  main.rs  manifest.rs  mcp.rs  mcp_targets.rs  mermaid.rs  orchestrate.rs  plan.rs  quality.rs  query.rs  reconcile.rs  research.rs  research_feedback.rs  resolve.rs  run.rs  search.rs  semantic_search.rs  serve.rs  storage.rs  subsystem_docs.rs  viewer.rs  watch.rs
src/agent/: agents.rs  ask.rs  mcp.rs  mod.rs
src/analysis/: cache.rs  chunks.rs  dockerfile.rs  environment.rs  external_symbols.rs  generic_text.rs  ir.rs  markdown.rs  mod.rs  packages.rs  parsed_source.rs  profiles.rs  protocols.rs  python.rs  rationale.rs  rust_metadata.rs  (+5 more)
tests/: build_support.rs  classification_snapshot.rs  cli.rs  drift.rs  fixture_polyglot.rs  golden_snapshot.rs  graph_query_cli.rs  init.rs  inspect_artifacts.rs  inspect_dsm.rs  inspect_env.rs  inspect_graph.rs  inspect_modules.rs  integrate_agents.rs  lab_cli.rs  regression_scan.rs  update.rs
ui/: README.md  index.html  package-lock.json  package.json  playwright.visual.config.ts  vite.config.ts
(+434 files in other folders)
