[package]
name = "lithograph"
version = "0.1.0"
edition = "2024"
description = "Repository knowledge compiler that builds evidence-backed documentation from semantic analysis."
license = "MIT"
repository = "https://github.com/fabio/lithograph"

[dependencies]
blake3 = "1.8.2"
camino = { version = "1.2.1", features = ["serde1"] }
cargo_metadata = "0.23.1"
clap = { version = "4.5.50", features = ["derive"] }
globset = "0.4.18"
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"
tree-sitter = "0.26.10"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
ureq = { version = "3.3.0", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "deny"
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
